--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,17 @@
           <artifactId>hibernate-core</artifactId>
           <version>5.6.7.Final</version>
       </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>5.8.2</version>
+          <scope>test</scope>
+      </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.22.0</version>
+    </dependency>
   </dependencies>
 
   <properties>
